# lrs

./: .travis.yml  Cargo.toml  LICENSE  README.md
lrs/: Cargo.toml
lrs-cli/: Cargo.toml
lrs-cli/src/: main.rs
lrs/src/: equation.rs  lib.rs  terms.rs  tests.rs
src/: clause.rs  lib.rs  result.rs  terms.rs  tests.rs
src/tests/: clauses.rs  mod.rs  symbols.rs  terms.rs
tests/: lib.rs
